tests/errors/if-cond-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/if-cond-conflict.futil
11 |      w1.in = 32'd1;
   |      ^^^^^^^^^^^^^^ Malformed Structure: Obviously conflicting assignments found
...
14 |      w1.in = 32'd2;
   |      ^^^^^^^^^^^^^^ `w1.in` is also written to here
...
24 |      if w1.out with w1_2 {
   |      ^^^^^^^^^^^^^^^^^^^^^ Assignments from `w1_2' are activated here, causing the conflict

tests/errors/if-cond-conflict.futil
14 |      w1.in = 32'd2;
   |      ^^^^^^^^^^^^^^ Malformed Structure: Obviously conflicting assignments found
...
11 |      w1.in = 32'd1;
   |      ^^^^^^^^^^^^^^ `w1.in` is also written to here
...
25 |        do_r;
   |        ^^^^^ Assignments activated by group enable, causing the conflict
